0.6.10/_sources/reference/generated/spectrochempy.Project.rst
spectrochempy.Project
=====================

.. currentmodule:: spectrochempy


.. autoclass:: Project

   

   
   
   .. rubric:: Attributes Summary


   .. autosummary::
   
      ~Project.allitems
      ~Project.allnames
      ~Project.datasets
      ~Project.datasets_names
      ~Project.filename
      ~Project.filetype
      ~Project.id
      ~Project.meta
      ~Project.name
      ~Project.parent
      ~Project.projects
      ~Project.projects_names
      ~Project.scripts
      ~Project.scripts_names
      ~Project.suffix
   
   

   
   
   .. rubric:: Methods Summary


   .. autosummary::
   
      ~Project.add_dataset
      ~Project.add_datasets
      ~Project.add_project
      ~Project.add_projects
      ~Project.add_script
      ~Project.add_scripts
      ~Project.copy
      ~Project.dump
      ~Project.load
      ~Project.remove_all_dataset
      ~Project.remove_all_project
      ~Project.remove_dataset
      ~Project.remove_project
      ~Project.save
      ~Project.save_as

   
   

   
   
   .. rubric:: Attributes Documentation

   
   .. autoattribute:: allitems
   .. autoattribute:: allnames
   .. autoattribute:: datasets
   .. autoattribute:: datasets_names
   .. autoattribute:: filename
   .. autoattribute:: filetype
   .. autoattribute:: id
   .. autoattribute:: meta
   .. autoattribute:: name
   .. autoattribute:: parent
   .. autoattribute:: projects
   .. autoattribute:: projects_names
   .. autoattribute:: scripts
   .. autoattribute:: scripts_names
   .. autoattribute:: suffix
   
   

   
   
   .. rubric:: Methods Documentation

   
   .. automethod:: add_dataset
   .. automethod:: add_datasets
   .. automethod:: add_project
   .. automethod:: add_projects
   .. automethod:: add_script
   .. automethod:: add_scripts
   .. automethod:: copy
   .. automethod:: dump
   .. automethod:: load
   .. automethod:: remove_all_dataset
   .. automethod:: remove_all_project
   .. automethod:: remove_dataset
   .. automethod:: remove_project
   .. automethod:: save
   .. automethod:: save_as
   
   


.. rubric:: Examples using spectrochempy.Project
.. _sphx_glr_backref_spectrochempy.Project:

.. minigallery:: spectrochempy.Project