0.10.1/_sources/reference/generated/spectrochempy.Project.rst
spectrochempy.Project
=====================

.. currentmodule:: spectrochempy

.. autoclass:: Project

   

   
   
   .. rubric:: Attributes Summary

   .. autosummary::
   
      ~Project.allitems
      ~Project.allnames
      ~Project.datasets
      ~Project.datasets_names
      ~Project.filename
      ~Project.filetype
      ~Project.has_defined_name
      ~Project.id
      ~Project.meta
      ~Project.name
      ~Project.parent
      ~Project.projects
      ~Project.projects_names
      ~Project.suffix
   
   

   
   
   .. rubric:: Methods Summary

   .. autosummary::
   
      ~Project.add_dataset
      ~Project.add_datasets
      ~Project.add_project
      ~Project.add_projects
      ~Project.clear_datasets
      ~Project.clear_projects
      ~Project.copy
      ~Project.dump
      ~Project.load
      ~Project.loads
      ~Project.remove_all_dataset
      ~Project.remove_all_project
      ~Project.remove_dataset
      ~Project.remove_project
      ~Project.save
      ~Project.save_as

   
   

   
   
   .. rubric:: Attributes Documentation

   
   .. autoattribute:: allitems
   .. autoattribute:: allnames
   .. autoattribute:: datasets
   .. autoattribute:: datasets_names
   .. autoattribute:: filename
   .. autoattribute:: filetype
   .. autoattribute:: has_defined_name
   .. autoattribute:: id
   .. autoattribute:: meta
   .. autoattribute:: name
   .. autoattribute:: parent
   .. autoattribute:: projects
   .. autoattribute:: projects_names
   .. autoattribute:: suffix
   
   

   
   
   .. rubric:: Methods Documentation

   
   .. automethod:: add_dataset
   .. automethod:: add_datasets
   .. automethod:: add_project
   .. automethod:: add_projects
   .. automethod:: clear_datasets
   .. automethod:: clear_projects
   .. automethod:: copy
   .. automethod:: dump
   .. automethod:: load
   .. automethod:: loads
   .. automethod:: remove_all_dataset
   .. automethod:: remove_all_project
   .. automethod:: remove_dataset
   .. automethod:: remove_project
   .. automethod:: save
   .. automethod:: save_as
   
   

.. rubric:: Examples using spectrochempy.Project
.. _sphx_glr_backref_spectrochempy.Project:

.. minigallery:: spectrochempy.Project